exports[`Aside Controlled mode 1`] = `
<portal>
  <aside
    data-ts="Aside"
    data-ts.busy={undefined}
    data-ts.open={false}
    data-ts.title="Aside demo">
    <div
      data-ts="Panel">
      <menu
        data-ts="Menu">
        <li
          className="">
          <button
            disabled={false}>
            <span>
              Menu item
            </span>
          </button>
        </li>
      </menu>
    </div>
  </aside>
</portal>
`;

exports[`Menu Basic usage 1`] = `
<menu
  data-ts="Menu">
  <li
    className="">
    <button
      disabled={false}>
      <span>
        Menu item 1
      </span>
    </button>
  </li>
  <li
    className="">
    <button
      disabled={false}>
      <span>
        Menu item 2
      </span>
    </button>
  </li>
</menu>
`;
